deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive
  namespace: hive
spec:
  type: ClusterIP
  selector: {}
  ports:
    - name: http
      port: 80
      targetPort: http
